rsvp/policy-ast/src/test/resources/antlr/negative/illegal-shadow-3.cedarschema
entity Foo;
namespace Bar {
    entity Foo;
}

// EXPECTED: Reference (R) Foo illegally shadowed